// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DeviceTile /> Last activity renders with inactive notice when last activity was more than 90 days ago 1`] = `"Inactive for 90+ days (Dec 4, 2021)"`;

exports[`<DeviceTile /> renders a device with no metadata 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
         · 
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> renders a verified device with no metadata 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
         · 
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> renders display name with a tooltip 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTile_info"
    >
      <div
        tabindex="0"
      >
        <h4
          class="mx_Heading_h4"
        >
          My device
        </h4>
      </div>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
         · 
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> separates metadata with a dot 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-lastActivity"
        >
          Last activity 15:13
        </span>
         · 
        <span
          data-testid="device-metadata-lastSeenIp"
        >
          1.2.3.4
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;
